# pexels-mcp-server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRIVACY.md  README.md  SUBMIT.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  publish.yml
src/pexels_mcp_server/: __init__.py  __main__.py  _sdk_patches.py  auth.py  client.py  constants.py  formatters.py  previews.py  schemas.py  server.py  storage.py  transport.py  types.py
src/pexels_mcp_server/templates/: landing.html  results_grid.html  setup.html
tests/: test_auth.py  test_client.py  test_formatters.py  test_live_integration.py  test_logging.py  test_previews.py  test_schemas.py  test_server_config.py  test_server_http.py  test_setup_flow.py  test_storage.py  test_transport.py
