[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pexels-mcp"
version = "0.4.0"
description = "Model Context Protocol server for the Pexels API (free stock photos and videos)."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Victor Moisson" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "pexels",
    "stock-photos",
    "stock-videos",
    "llm",
    "anthropic",
    "claude",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.25,<2",
    "httpx>=0.27",
    "pydantic>=2.0",
    "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://github.com/VictorNain26/pexels-mcp-server"
Repository = "https://github.com/VictorNain26/pexels-mcp-server"
Issues = "https://github.com/VictorNain26/pexels-mcp-server/issues"

[project.scripts]
pexels-mcp = "pexels_mcp_server.__main__:main"
pexels-mcp-server = "pexels_mcp_server.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pexels_mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "RUF",
    "ASYNC",
    "C4",
    "PT",
    "TID",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src", "tests"]
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]
