[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pexels-mcp"
version = "0.6.0"
description = "Model Context Protocol server for the Pexels API (free stock photos and videos)."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Victor Moisson" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "pexels",
    "stock-photos",
    "stock-videos",
    "llm",
    "anthropic",
    "claude",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.25,<2",
    "httpx[http2]>=0.27",
    "pydantic>=2.0",
    "uvicorn>=0.30",
    # Optional persistence backend for the OAuth state (clients + tokens +
    # bound Pexels keys). When ``REDIS_URL`` is set, the provider stores
    # state in Redis (Upstash / Redis Cloud / self-hosted) so a server
    # restart no longer forces every user to re-walk OAuth + re-paste their
    # Pexels key. The Pexels key is encrypted at rest with Fernet (AES-128-CBC
    # + HMAC-SHA256) using ``MCP_ENCRYPTION_KEY`` before being stored.
    "redis>=5.0",
    "cryptography>=42",
]

[project.urls]
Homepage = "https://github.com/VictorNain26/pexels-mcp-server"
Repository = "https://github.com/VictorNain26/pexels-mcp-server"
Issues = "https://github.com/VictorNain26/pexels-mcp-server/issues"

[project.scripts]
pexels-mcp = "pexels_mcp_server.__main__:main"
pexels-mcp-server = "pexels_mcp_server.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pip-audit>=2.7",
    "fakeredis>=2.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pexels_mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "RUF",
    "ASYNC",
    "C4",
    "PT",
    "TID",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src", "tests"]
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]
markers = [
    "live: hits the real api.pexels.com / images.pexels.com (requires PEXELS_API_KEY env var). Excluded from CI; opt in with `pytest -m live`.",
]
# Default: skip live tests. Override with `-m live` or `-m 'live or not live'`.
addopts = "-m 'not live'"

[tool.coverage.run]
source = ["src/pexels_mcp_server"]
branch = true
omit = [
    # CLI bootstrap is exercised end-to-end by the docker-build smoke test
    # in CI (boot-refusal + boot-success paths). Unit-testing it would
    # require mocking uvicorn.run() — low value for the line count.
    "src/pexels_mcp_server/__main__.py",
]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
skip_covered = false
show_missing = true
